<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_comprovante"
    android:paddingTop="32dp">

    <ImageView
        android:id="@+id/img_bkg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/recibo_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_success"
        android:fontFamily="@font/din_condensed_bold"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_finish"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/img_bkg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/img_bkg"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tv_c_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/tahoma_bold"
        android:gravity="center"
        android:text="@string/eymobyle_name"
        android:textColor="@color/colorSecundaryText"
        app:layout_constraintEnd_toEndOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <TextView
        android:id="@+id/tv_c_street"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/tahoma"
        android:gravity="center"
        android:text="@string/street"
        android:textColor="@color/colorSecundaryText"
        app:layout_constraintEnd_toEndOf="@+id/tv_c_name"
        app:layout_constraintStart_toStartOf="@+id/tv_c_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_c_name" />

    <TextView
        android:id="@+id/tv_value_peyment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/tahoma_bold"
        android:gravity="center"
        android:text="00"
        android:textColor="@color/colorSecundaryText"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_c_street"
        app:layout_constraintStart_toStartOf="@+id/tv_c_street"
        app:layout_constraintTop_toBottomOf="@+id/tv_c_street" />

    <TextView
        android:id="@+id/tv_type_peyment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/tahoma"
        android:textAlignment="center"
        android:textColor="@color/colorSecundaryText"
        app:layout_constraintEnd_toEndOf="@+id/tv_value_peyment"
        app:layout_constraintStart_toStartOf="@+id/tv_value_peyment"
        app:layout_constraintTop_toBottomOf="@+id/tv_value_peyment" />

    <TextView
        android:id="@+id/tv_date_peyment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/tahoma"
        android:gravity="center"
        android:textSize="10dp"
        android:text="@string/date_payment"
        android:textColor="@color/colorSecundaryText"
        app:layout_constraintEnd_toEndOf="@+id/tv_value_peyment"
        app:layout_constraintStart_toStartOf="@+id/tv_value_peyment"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_peyment" />
</androidx.constraintlayout.widget.ConstraintLayout>